--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_executable(kal_llvm Ast.cpp main.cpp)
 target_link_libraries(kal_llvm ${REQUIRED_LLVM_LIBS})
 target_include_directories(kal_llvm PUBLIC include)
+
+add_executable(kal_llvm_test test.cpp output.o)
