--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(kal_llvm Ast.cpp main.cpp)
+add_executable(kal_llvm Ast.cpp Debugger.cpp main.cpp)
 target_link_libraries(kal_llvm ${REQUIRED_LLVM_LIBS})
 target_include_directories(kal_llvm PUBLIC include)
 
